fix: responsive max-[1200px]

--- a/index.html
+++ b/index.html
@@ -466,38 +466,38 @@
     </div>
   </section>
   <!-- Train -->
-  <section class="w-full h-[1038px] flex items-end justify-center max-[375px]:w-full max-[375px]:h-[341px] max-[1200px]:w-full max-[1200px]:h-[341px] ">
+  <section class="w-screen h-[1038px] flex items-end justify-center max-[1200px]:w-screen max-[1200px]:h-[341px] ">
     <div
-      class="w-[100vw] h-[969px] flex flex-col items-center justify-between max-[375px]:w-[354px] max-[375px]:h-[294px] max-[1200px]:w-[354px] max-[1200px]:h-[294px]">
+      class="w-[100vw] h-[969px] flex flex-col items-center justify-between  max-[1200px]:w-[354px] max-[1200px]:h-[294px] max-[1200px]:flex-col">
       <div
-        class="w-[574px] h-[136px] flex items-center justify-center font-poppins font-bold text-5xl max-[375px]:text-2xl max-[1200px]:text-2xl">
+        class="w-[574px] h-[136px] flex items-center justify-center font-poppins font-bold text-5xl max-[1200px]:text-2xl">
         World Top Visiting <br />
         Place in 2021
       </div>
-      <div class=" w-[100vw] h-[743px] flex relative max-[375px]:w-[354px] max-[375px]:h-[187px] max-[1200px]:w-[354px] max-[1200px]:h-[187px] ">
+      <div class=" w-[100vw] h-[743px] flex relative max-[1200px]:w-[354px] max-[1200px]:h-[187px] ">
         <img class="z-0 brightness-90" src="images/mon-place.png" alt="place" />
         <div
-          class="w-full h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[1200px]:w-[29px] max-[1200px]:h-[29px] ">
-          <div class="maxico mt-72 ml-[200px] flex flex-col items-center w-20 h-20  max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[10px] max-[375px]:mt-[100px] max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[10px] max-[1200px]:mt-[100px]  ">
+          class="w-screen h-[204px] absolute left-10  max-[1200px]:w-[29px] max-[1200px]:h-[29px] ">
+          <div class="maxico mt-72 ml-[200px] flex flex-col items-center w-20 h-20  max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[10px] max-[1200px]:mt-[100px]  ">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border  " src="images/mon-mexico 1.png" alt="maxico" />
-            <h4 class="font-bold text-center max-[375px]:hidden max-[1200px]:hidden ">Maxico</h4>
-            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden max-[1200px]:hidden ">03 Tour</p>
+            <h4 class="font-bold text-center max-[1200px]:hidden ">Maxico</h4>
+            <p class="text-xs text-zinc-400 text-center max-[1200px]:hidden ">03 Tour</p>
           </div>
         </div>
         <div
-          class="w-[120px] h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[375px]:left-[100px]">
-          <div class="france mt-52 ml-[700px]  flex flex-col items-center w-20 h-20 max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[60px] max-[375px]:mt-11 max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[60px] max-[1200px]:mt-11">
+          class="w-[120px] h-[204px] absolute left-10 max-[1200px]:w-[29px] max-[1200px]:h-[29px] max-[1200px]:left-[100px]">
+          <div class="france mt-52 ml-[700px]  flex flex-col items-center w-20 h-20  max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[60px] max-[1200px]:mt-11">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border  " src="images/mon-france 1.png" alt="france" />
-            <h4 class="font-bold text-center max-[375px]:hidden max-[1200px]:hidden">France</h4>
-            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden max-[1200px]:hidden">03 Tour</p>
+            <h4 class="font-bold text-center  max-[1200px]:hidden">France</h4>
+            <p class="text-xs text-zinc-400 text-center  max-[1200px]:hidden">03 Tour</p>
           </div>
         </div>
         <div
-          class="w-[120px] h-[204px] absolute left-10 max-[375px]:w-[29px] max-[375px]:h-[29px] max-[375px]:left-[100px]">
-          <div class="aus mt-[500px] ml-[1200px] flex flex-col items-center w-20 h-20 max-[375px]:h-[29px] max-[375px]:w-10 max-[375px]:ml-[180px] max-[375px]:mt-[120px] max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[180px] max-[1200px]:mt-[120px]  ">
+          class="w-[120px] h-[204px] absolute left-10 max-[1200px]:w-[29px] max-[1200px]:h-[29px] max-[375px]:left-[100px]">
+          <div class="aus mt-[500px] ml-[1200px] flex flex-col items-center w-20 h-20 max-[1200px]:h-[29px] max-[1200px]:w-10 max-[1200px]:ml-[180px] max-[1200px]:mt-[120px]  ">
             <img class="z-50 ring-4 ring-zinc-300 rounded-full border " src="images/mon-australia 1.png" alt="Aus" />
-            <h4 class="font-bold text-center max-[375px]:hidden max-[1200px]:hidden">Australia</h4>
-            <p class="text-xs text-zinc-400 text-center max-[375px]:hidden max-[1200px]:hidden">02 Tour</p>
+            <h4 class="font-bold text-center max-[1200px]:hidden">Australia</h4>
+            <p class="text-xs text-zinc-400 text-center  max-[1200px]:hidden">02 Tour</p>
           </div>
         </div>  
     </div>
@@ -513,13 +513,13 @@
           Subscribe <br>
           for every Tour <br>News & Tips </p>
         <div
-          class="Email w-[574px] h-[100px] bg-white shadow-2xl rounded-xl flex items-center justify-center max-[375px]:w-[355px] max-[1200px]:w-[355px] ">
+          class="Email w-[574px] h-[100px] bg-white shadow-2xl rounded-xl flex items-center justify-center max-[1200px]:w-[355px] ">
           <input
             class="placeholder:text-black w-[574px] h-[100px] shadow-xl border-2 rounded-md focus:outline-none focus:border-orange-500 border-slate-200 hover:border-orange-300 placeholder-slate-300"
             type="Email" placeholder="Enter you email ">
           <div class="w-[177px] h-[70px] flex items-center justify-between">
             <button
-              class="w-[177px] h-[70px] max-[375px]:w-160 max-[375px]:py-5 max-[1200px]:w-160 max-[1200px]:py-5  flex items-center justify-center py-10 px-1 p-2 rounded-2xl bg-orange-600 text-white hover:bg-orange-400 active:bg-orange-600 focus:ring focus:ring-orange-300 ">
+              class="w-[177px] h-[70px] max-[1200px]:w-160 max-[1200px]:py-5  flex items-center justify-center py-10 px-1 p-2 rounded-2xl bg-orange-600 text-white hover:bg-orange-400 active:bg-orange-600 focus:ring focus:ring-orange-300 ">
               Subscribe 🡲
             </button>
           </div>
