--- a/index.html
+++ b/index.html
@@ -132,20 +132,21 @@
 
 
   <section
-    class="vacation p-6 flex flex-wrap flex-col w-screen max-[375px]:flex-nowrap max-[375px]:pl-10 max-[375px]:pr-0 max-[375px]:items-center max-[375px]:h-[533px]">
-    <header class="flex justify-between max-[375px]:gap-6 max-[375px]:w-[375px]">
-      <div class="head-vacation w-[534px] h-[136px] font-bold text-5xl leading-[68px] max-[375px]:text-[24px]
-        max-[375px]:leading-[34px] max-[375px]:w-[280px] max-[375px]:h-[102px]">Start Your Vacation with Lost
+    class="vacation p-0 m-0 flex flex-wrap flex-col items-center w-screen max-[1200px]:flex-nowrap max-[1200px]:pl-12 max-[1200px]:pt-20 max-[1200px]:items-center max-[1200px]:h-[533px]">
+    <header class="w-[1420px] flex justify-between max-[1200px]:gap-6 max-[1200px]:w-[375px]">
+      <div class="head-vacation w-[534px] h-[136px] font-bold text-5xl leading-[68px] max-[1200px]:text-[24px]
+        max-[1200px]:leading-[34px] max-[1200px]:w-[280px] max-[1200px]:h-[102px]">Start Your Vacation with Lost
         of Services!</div>
-      <div class="view-all h-[24px] w-[188px] mt-[100px] text-orange-500 max-[375px]:mt-[75px] max-[375px]:hidden">View
+      <div class="view-all h-[24px] w-[188px] mt-[100px] text-orange-500 max-[1200px]:mt-[75px] max-[1200px]:hidden">
+        View
         All
         Services 🡲</div>
       <div
-        class="view-all hidden h-[24px] w-[188px] mt-[100px] text-orange-500 max-[375px]:mt-[75px] max-[375px]:block">
+        class="view-all hidden h-[24px] w-[188px] mt-[100px] text-orange-500 max-[1200px]:mt-[75px] max-[1200px]:block">
         View
         All 🡲</div>
     </header>
-    <div class=" flex justify-between gap-5 max-[375px]:flex-col max-[375px]:w-[375px]">
+    <div class="w-[1420px] flex justify-between gap-5 max-[1200px]:flex-col max-[1200px]:w-[375px]">
       <div class="box">
         <div class="icon-vacation">
           <img src="images/family.png">
@@ -155,7 +156,7 @@
           <p class="text-xs text-zinc-400">155 Properties</p>
         </div>
       </div>
-      <div class="box max-[375px]:hidden">
+      <div class="box max-[1200px]:hidden">
         <div class="icon-vacation">
           <img src="images/scuba-diving.png">
         </div>
@@ -164,7 +165,7 @@
           <p class="text-xs text-zinc-400">143 Properties</p>
         </div>
       </div>
-      <div class="box max-[375px]:hidden">
+      <div class="box max-[1200px]:hidden">
         <div class="icon-vacation">
           <img src="images/deer-facing-right.png">
         </div>
@@ -173,7 +174,7 @@
           <p class="text-xs text-zinc-400">122 Properties</p>
         </div>
       </div>
-      <div class="box max-[375px]:hidden">
+      <div class="box max-[1200px]:hidden">
         <div class="icon-vacation">
           <img src="images/bicycle.png">
         </div>
@@ -190,15 +191,15 @@
   <!-- P'Pipo -->
   <!-- P'Pipo -->
   <section
-    class="package p-2 flex flex-col items-center gap-10 max-[375px]:gap-2 w-screen h-[1176px] max-[375px]:pl-0 max-[375px]:pr-5  max-[375px]:h-[1004px]">
+    class="package p-2 flex flex-col items-center gap-10 max-[1200px]:gap-2 w-screen h-[1176px] max-[1200px]:pl-0 max-[1200px]:pr-5 max-[1200px]:h-[1004px]">
 
-    <header class="pt-6 mb-4 text-center w-[400px] h-[136px] font-bold text-5xl leading-[68px] max-[375px]:text-[24px]
-    max-[375px]:leading-[34px] max-[375px]:w-[200px] max-[375px]:h-[102px]">Our Upcoming Tour Package</header>
+    <header class="pt-6 mb-4 text-center w-[400px] h-[136px] font-bold text-5xl leading-[68px] max-[1200px]:text-[24px]
+    max-[1200px]:leading-[34px] max-[1200px]:w-[200px] max-[1200px]:h-[102px]">Our Upcoming Tour Package</header>
 
-    <div class="flex gap-5 max-[375px]:flex-col max-[375px]:items-center max-[375px]:gap-10">
+    <div class="flex gap-5 max-[1200px]:flex-col max-[1200px]:items-center max-[1200px]:gap-10">
 
-      <div class="package-info mt-8 w-[453] h-[606] max-[375px]:w-[335px] max-[375px]:h-[494]">
-        <div class="package-pic max-[375px]:w-[355px] max-[375px]:h-[407]">
+      <div class="package-info mt-8 w-[453] h-[606] max-[1200px]:w-[335px] max-[1200px]:h-[494]">
+        <div class="package-pic max-[1200px]:w-[355px] max-[1200px]:h-[407]">
           <div class="price">$599</div>
         </div>
         <div class="flex justify-between mt-4">
@@ -221,8 +222,8 @@
         </div>
       </div>
       <div
-        class="package-info w-[453] h-[606] max-[375px]:w-[325px] max-[375px]:h-[494] max-[375px]:mr-7 max-[375px]:hidden">
-        <div class="package-pic max-[375px]:w-[355px] max-[375px]:h-[407]">
+        class="package-info w-[453] h-[606] max-[1200px]:w-[325px] max-[1200px]:h-[494] max-[1200px]:mr-7 max-[1200px]:hidden">
+        <div class="package-pic max-[1200px]:w-[355px] max-[1200px]:h-[407]">
           <div class="price">$480</div>
         </div>
         <div class="flex justify-between mt-4">
@@ -245,8 +246,8 @@
         </div>
       </div>
       <div
-        class="package-info mt-8 w-[453] h-[606] max-[375px]:w-[355px] max-[375px]:h-[494] max-[375px]:mt-0 max-[375px]:hidden">
-        <div class="package-pic max-[375px]:w-[355px] max-[375px]:h-[407]">
+        class="package-info mt-8 w-[453] h-[606] max-[1200px]:w-[355px] max-[1200px]:h-[494] max-[1200px]:mt-0 max-[1200px]:hidden">
+        <div class="package-pic max-[1200px]:w-[355px] max-[1200px]:h-[407]">
           <div class="price">$550</div>
         </div>
         <div class="flex justify-between mt-4">
@@ -270,7 +271,8 @@
       </div>
     </div>
 
-    <button class="w-[180px] h-[70px] bg-orange-500 rounded-[15px] text-white max-[375px]:p-5 max-[375px]:mt-5">View All
+    <button class="w-[180px] h-[70px] bg-orange-500 rounded-[15px] text-white max-[1200px]:p-5 max-[1200px]:mt-5">View
+      All
       🡲</button>
 
   </section>
